# LNOsuperconductivity

./: .gitignore  CMakeLists.txt  Model_Notes.md  README.md
figures/: Kondo2LegSpinCorrJh2t21U20.eps  SpinSingleOrbitaldelta=0.1_2D_3x20Pin.eps  twobandtwoorbitaldorbital.eps  twooribitaltwolayerf_orbital.eps
plot/: PlotCharge2D_twoorbital_twolayer.m  PlotLocalSpin2D_twoorbital_twolayer.m  PlotSingleOrbSpin1D.m  PlotSingleOrbSpin2D.m  PlotSingleOrbSpinCorr1D.m  PlotSingleOrbSpinCorr2D.m  PlotSpinCorr1D.m  PlotSpinCorr2D.m  SquareLattice.m  my_colormap.m  signlog.m
plot/+plt/: apply_defaults.m  build_postfix.m  format_number.m
plot/PhaseDiagram/: PhaseDiagram1D.eps  PhaseDiagram1D.m  PhaseDiagramJh2.m  PhaseDiagramJh4.m
plot/kondo_1d_chain/: PhaseDiagram1D.m  plot_itinerate_spin_corr_1d_chain.m  plot_localized_spin_corr_1d_chain.m
plot/kondo_coupled_zigzag_chain/: TiltedZigZagLattice.m  plot_itinerate_spin_corr.m  plot_localized_spin_corr.m  plot_spin_corr.m
plot/kondo_coupled_zigzag_chain/figures/: Figure_1.eps  kondo_2leg_spin_corr_jh2_t2-0.6_u20.eps  kondo_2leg_spin_corr_jh4_t2-0.3_u2_lx20.eps  kondo_2leg_spin_corr_t2-0.3_jh4_u14.eps  kondo_2leg_spin_corr_two_params_jh4_t2-0.6_u26_lx20_and_jh4_t2-0.3_u14_lx20.eps  kondo_ladder_spin_corr_jh4_t2-0.3_u14_ly4_lx20.eps  kondo_ladder_spin_corr_jh4_t2-0.3_u2_ly4_lx20.eps  kondo_ladder_spin_corr_two_params_jh4_t2-0.3_u14_ly2_lx20_and_jh4_t2-0.3_u14_ly4_lx20.ai  kondo_ladder_spin_corr_two_params_jh4_t2-0.3_u14_ly2_lx20_and_jh4_t2-0.3_u14_ly4_lx20.eps  kondo_ladder_spin_corr_two_params_jh4_t2-0.6_u26_ly2_lx20_and_jh4_t2-0.3_u14_ly2_lx20.eps
plot/kondo_two_layer/: load_truncation_error.m
plot/kondo_two_layer_2d/: load_sc_data.m  plot_sc_corr_two_layer.m  plot_singlet_sc_corr_extrapolation.m  plot_singlet_sc_corr_extrapolation_all.m
plot/kondo_two_leg/: plot_spin_corr.m
plot/kondo_two_leg_ladder/: KondoTilted2LegLattice.m  PhaseDiagramJh4.m  SquareLattice.m  load_sc_data.m  plot_sc_corr_conventional_square.m  plot_spin_corr.m  plot_spin_corr_two_panel.m
plot/plot_kondo_two_layer/: load_sc_data.m  load_truncation_error.m  plot_sc_corr_two_layer.m  plot_singlet_sc_corr_extrapolation.m  plot_singlet_sc_corr_extrapolation_all.m
plot/plot_kondo_two_leg/: KondoTilted2LegLattice.m  SquareLattice.m  load_sc_data.m  plot_sc_corr.m  plot_sc_corr_conventional_square.m
plot/single_orbital/: PlotSingleOrbSpin2D.m
plot/tj_double_layer_single_orbital_2d/: PlotSingleOrbSpin1D.m  PlotSingleOrbSpin2D.m  PlotSingleOrbSpinCorr1D.m  PlotSingleOrbSpinCorr2D.m
plot/two_layer_two_orbital_all_dof/: PlotLocalSpin2D_twoorbital_twolayer.m  PlotSpinCorr1D.m  PlotSpinCorr2D.m
plot/two_orbital_two_layer/: PlotCharge2D_twoorbital_twolayer.m
src/: continue.cpp  dmrg.cpp  fix_env.cpp  fix_mps.cpp  fix_update_lenv.cpp  fix_update_renv.cpp  gqdouble.h  measure1.cpp  measure2.cpp  measureSC.cpp  measure_total_spin.cpp  move_center.cpp  mpogen.cpp  my_measure.h  myutil.cpp  myutil.h  operators.cpp  operators.h  params.json  params_case.h  squarelattice.h  tJmodel.h  two_site_update_finite_vmps_mpi_impl_continue.h  u1u1u1qn.h  vmps.cpp
src_2layer_2orbital_all_dof/: Model.md
src_4band/: dmrg.cpp  hilbert_space.h  hubbard_operators.cpp  hubbard_operators.h  measure1.cpp  measureSC_fix_ref.cpp  params.json  params_case.h
src_kondo/: params.json  vmps.cpp
src_kondo_1D/: params_case.h
src_kondo_1d_chain/: kondo_hilbert_space.h  measure.cpp  params_case.h  vmps.cpp
src_kondo_two_layer/: fix_env.cpp  fix_env_kondo.cpp  fix_mps.cpp  fix_mps_kondo.cpp  fix_update_lenv.cpp  move_center.cpp  mpo_gen.cpp  vmps_conventional_square.cpp
src_kondo_two_layer_2d/: DMRG_Mapping.md  finite_mps_extended.h  fix_env.cpp  fix_env_kondo.cpp  fix_mps2_kondo.cpp  fix_mps_kondo.cpp  fix_update_lenv_kondo.cpp  fix_update_renv.cpp  measure_sp.cpp  move_center.cpp  mpo_gen.cpp  params.json  params_case.h  vmps_conventional_square.cpp  vmps_tilted_zigzag.cpp
src_kondo_two_leg/: dmrg_Jk0.cpp  measure.cpp  params.json  vmps.cpp  vmps_Jk0.cpp  vmps_conventional_square.cpp
src_kondo_two_leg_ladder/: dmrg_Jk0.cpp  measure.cpp  params.json  params_case.h  visualize_tilted_lattice.cpp  vmps.cpp  vmps_conventional_square.cpp
src_kondo_zigzag_ladder/: dmrg_Jk0.cpp  measure.cpp  tilted_zigzag_lattice.h  vmps.cpp  vmps_Jk0.cpp  vmps_conventional_square.cpp
src_peps_kondo_single_layer/: README.md  common_params.h  enhanced_params_parser.h  mc_measure.cpp  mc_measure_params.h  peps_kondo_2x2_exact_sum_optimize.cpp  peps_kondo_square_simple_update.cpp  qldouble.h  square_kondo_model.h  square_kondo_nn_updater.h  vmc_optimize.cpp
src_peps_kondo_single_layer/Note/: kondo_peps_vmc_validation.md  small_size_benchmarks.md
src_peps_kondo_single_layer/params/: mc_measure_algorithm_params.json  physics_params.json  simple_update_algo.json  vmc_algorithm_params.json
src_peps_kondo_single_layer/tools/: ed_kondo_small.py  quspin_ed_kondo_2x2.py
src_single_orbital/: dmrg.cpp  dmrg_single_orbital_double_layer.cpp  double_layer_tJmodel.h  measure1.cpp  measure2.cpp  measureSC.cpp  measure_total_spin.cpp  mpogen.cpp  my_measure.h  myutil.cpp  params.json  params_case.h  squarelattice.h  tJ_operators.cpp  tJ_operators.h  tJ_type_hilbert_space.h  tJmodel.h  u1u1u1qn.h  vmps.cpp
src_single_orbital_single_layer/: dmrg_single_orbital_single_layer.cpp  measure1.cpp  single_layer_tJmodel.h  squarelattice.h  tJ_operators.cpp  tJ_operators.h
src_tj_double_layer_single_orbital_2d/: continue.cpp  dmrg_single_orbital_double_layer.cpp  double_layer_squarelattice.h  fix_env.cpp  fix_mps.cpp  fix_update_lenv.cpp  fix_update_renv.cpp  measure1.cpp  measure2.cpp  measureSC.cpp  move_center.cpp  mpogen.cpp  my_measure.h  params.json  tJ_type_hilbert_space.h  two_site_update_finite_vmps_mpi_impl_continue.h  vmps.cpp
src_tj_single_layer_single_orbital_2d_anisotropic/: dmrg_single_orbital_single_layer.cpp  measure1.cpp  single_layer_tJmodel.h
src_two_layer_two_orbital_all_dof/: dmrg.cpp  hilbert_space.h  measure1.cpp  myutil.h  params.json  params_case.h
(+10 files in other folders)
